--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,12 @@ uuid = "4645c4d4-41e8-4fef-9930-c526a85eead8"
 authors = ["Fredrik Bagge Carlson"]
 version = "0.1.0"
 
+[deps]
+Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+ThreadTools = "dbf13d8f-d36e-4350-8970-f3a99faba1a8"
+WAV = "8149f6b0-98f6-5db9-b78f-408fbbb8ef88"
+
 [compat]
 julia = "1"
 
