--- a/Project.toml
+++ b/Project.toml
@@ -5,12 +5,15 @@ version = "0.1.0"
 
 [deps]
 Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
+SpectralDistances = "2b0dec9d-f767-4f95-9e73-7df56487de68"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 ThreadTools = "dbf13d8f-d36e-4350-8970-f3a99faba1a8"
 WAV = "8149f6b0-98f6-5db9-b78f-408fbbb8ef88"
 
 [compat]
 ThreadTools = "0.2"
+SpectralDistances = "0.1.16"
+WAV = "1"
 julia = "1"
 
 [extras]
