--- a/Project.toml
+++ b/Project.toml
@@ -11,8 +11,9 @@ ThreadTools = "dbf13d8f-d36e-4350-8970-f3a99faba1a8"
 WAV = "8149f6b0-98f6-5db9-b78f-408fbbb8ef88"
 
 [compat]
-ThreadTools = "0.2"
 SpectralDistances = "0.1.16"
+Statistics = "1"
+ThreadTools = "0.2"
 WAV = "1"
 julia = "1"
 
